{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 17,
  "lineage": "1cb189a5-f260-2706-a555-98e591830b86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-06402017741c4a664",
            "domain": "vpc",
            "id": "eipalloc-06ca2e8ffa3f1709b",
            "network_border_group": "us-west-2",
            "network_interface": "eni-01fb9ee1c677d7d63",
            "private_dns": "ip-10-2-0-33.us-west-2.compute.internal",
            "private_ip": "10.2.0.33",
            "public_dns": "ec2-44-233-20-22.us-west-2.compute.amazonaws.com",
            "public_ip": "44.233.20.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:internet-gateway/igw-0066395bdfaadc52d",
            "id": "igw-0066395bdfaadc52d",
            "owner_id": "757165535249",
            "tags": {
              "Name": "default_igw"
            },
            "tags_all": {
              "Name": "default_igw"
            },
            "vpc_id": "vpc-063da1e3bcc528030"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ca2e8ffa3f1709b",
            "connectivity_type": "public",
            "id": "nat-0b4fb9a51fbd652d3",
            "network_interface_id": "eni-01fb9ee1c677d7d63",
            "private_ip": "10.2.0.33",
            "public_ip": "44.233.20.22",
            "subnet_id": "subnet-0725eee1069328bd2",
            "tags": {
              "Name": "default_NAT"
            },
            "tags_all": {
              "Name": "default_NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:route-table/rtb-0653b70ccbdb70ead",
            "id": "rtb-0653b70ccbdb70ead",
            "owner_id": "757165535249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b4fb9a51fbd652d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_routes"
            },
            "tags_all": {
              "Name": "private_routes"
            },
            "vpc_id": "vpc-063da1e3bcc528030"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:route-table/rtb-0451e0ac75e2c96c2",
            "id": "rtb-0451e0ac75e2c96c2",
            "owner_id": "757165535249",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0066395bdfaadc52d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_routes"
            },
            "tags_all": {
              "Name": "public_routes"
            },
            "vpc_id": "vpc-063da1e3bcc528030"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa083991fd60fea6",
            "route_table_id": "rtb-0653b70ccbdb70ead",
            "subnet_id": "subnet-0dba66b10e845d7f5"
          },
          "dependencies": [
            "aws_nat_gateway.default",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01157aa6fb23b9505",
            "route_table_id": "rtb-0451e0ac75e2c96c2",
            "subnet_id": "subnet-0725eee1069328bd2"
          },
          "dependencies": [
            "aws_vpc.default",
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:subnet/subnet-0dba66b10e845d7f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0dba66b10e845d7f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "757165535249",
            "tags": {
              "Name": "default-private"
            },
            "tags_all": {
              "Name": "default-private"
            },
            "vpc_id": "vpc-063da1e3bcc528030"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:subnet/subnet-0725eee1069328bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0725eee1069328bd2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "757165535249",
            "tags": {
              "Name": "default-public"
            },
            "tags_all": {
              "Name": "default-public"
            },
            "vpc_id": "vpc-063da1e3bcc528030"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:757165535249:vpc/vpc-063da1e3bcc528030",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-02c81e9afcef2862d",
            "default_route_table_id": "rtb-01673a529cccc7356",
            "default_security_group_id": "sg-09a52f050be9352cb",
            "dhcp_options_id": "dopt-0eb242c384d4c0031",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-063da1e3bcc528030",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01673a529cccc7356",
            "owner_id": "757165535249",
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            }
          }
        }
      ]
    }
  ]
}